[package]
name = "screen-snip"
version = "0.1.0"
edition = "2021"
description = "A tiny but elegent screeshot with selecting region tool with GUI based on EGUI."
authors = ["Jamie <bdmundxyang@gmail.com>", "Jimmyzzt <mocking.jimmy@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Jimmyzzt/ScreenSnip"
categories = ["multimedia::images"]
keywords = ["screenshot", "crop", "snipping", "cross-platform", "select-region"]
readme = "README.md"

[dependencies]
eframe = { version = "0.31", default-features = true, features = [
    "default_fonts",
    "glow",
] }
xcap = "0.3.1"
image = { version = "0.25.5", features = ["png", "jpeg"] }
